infra/k8s/templates/namespace.template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
  labels:
    project-id: ${PROJECT_ID}
    environment: ${ENVIRONMENT}
